# src/main/java/com/boulderingnavigation/dto/LoginRequest.java
@@ -1,0 +1,9 @@
+package com.boulderingnavigation.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record LoginRequest(
+        @NotBlank String email,
+        @NotBlank String password
+) {
+}
