# src/main/java/com/boulderingnavigation/dto/UserResponse.java
@@ -1,0 +1,8 @@
+package com.boulderingnavigation.dto;
+
+public record UserResponse(
+        Long id,
+        String email,
+        String nickname
+) {
+}
